# derangements

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  Makefile  README.md
src/: derangements.rs  derangements_iter.rs  derangements_range.rs  derangements_vec.rs  fast_permutations.rs  lib.rs  restricted_permutations.rs
